@@ -1,3 +1,8 @@
+2003-12-31  Mark Kettenis  <kettenis@gnu.org>
+
+	* config/sparc/nm-sol2.h (TARGET_CAN_USE_HARDWARE_WATCHPOINT):
+	Remove define.  Adjust comment.
+
 2003-12-29  Mark Kettenis  <kettenis@gnu.org>
 
 	* sparcnbsd-tdep.c (sparc32nbsd_sigcontext_frame_cache): Fix comment.
